# autonomous-world-model

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX-HANDOFF.md  README.md  RUNBOOK.md  program.md  zensical.toml
.loop/: config.json
.loop/agents/: coder.md  executor.md  hypothesis.md  research-director.md
.loop/briefs/: research-architecture.md  research-cycle.md  research-full-bptt.md  research-hyperparams.md  research-sf-ratio.md
.loop/knowledge/: learnings.md  mamba2-properties.md  training-stages.md  world-model-patterns.md
.loop/prompts/: conductor.md
.loop/state/: best.json  budget.json  goals.md  log.jsonl  running.json
bot/: .env.example  keygen.py  matrix_bot.py  notify.py  sign_command.py
crank/: __init__.py  agents.py  main.py  match_runner.py  requirements.txt  solana_bridge.py  state_convert.py  ws_server.py
data/: __init__.py  dataset.py  jepa_dataset.py  policy_dataset.py
docs/: CODEX-BRIEF.md  HANDOFF.md  RESEARCH-DIARY.md  RESEARCH-LOG.md  RUNNING.md  TROUBLESHOOTING.md  agent-system.md  architecture-overview.md  autoresearch-plan.md  codex-prompt-build-deploy.md  codex-prompt-session-lifecycle.md  cu-benchmark-findings.md  custom-syscall-tradeoffs.md  design-arena-mechanics.md  design-visual-ux.md  diagrams.md  eigencloud-analysis.md  event-slicing-direction.md  gpu-ops.md  index.md  jepa-data-flow.md  jepa-direction.md  jepa-implementation-plan.md  jepa-scaling-notes.md  magicblock-handoff.md  packed-matmul-explainer.md  path-a-agave-syscall.md  path-b-detailed-spec.md  path-b-magicblock-er.md  playability-analysis.md  program.md  rendering-architecture.md  research-canon.md  site-map.md  sol-matmul-i8-spec.md  solana-dependency-pins.md  training-pipeline-research.md
docs/base-builds/: b001.yaml  b002.yaml  index.md
docs/decisions/: 2026-03-15-session1.md  2026-03-19-cycle1.md  README.md
docs/experiments/: index.md
docs/jepa-direction-notes/: smooth-physics-vs-game-rules.md
docs/run-cards/: e008a-tap-focal-hidden.md  e008b-positional-conditioning.md  e008c-multi-position.md  e008d-bidirectional.md  e008e-future-ctrl.md  e009a-v3-focal-multi-k10.md  e009b-v3-focal-multi-k30.md  (+46 more)
experiments/: e009a-v3-focal-multi-k10.yaml  e009b-v3-focal-multi-k30.yaml  e010d-combined-bc.yaml  e010e-combined-bc-proj.yaml  e011a-char-embed-32.yaml  e011b-char-conditioning.yaml  e011c-char-embed-cond.yaml  e012-clean-fd-top5.yaml  e012b-fd-top5-ss.yaml  e013-hitbox-data.yaml  e014-cascaded-heads.yaml  e015-true-ss.yaml  e016-omnibus.yaml  e017a-absolute-y.yaml  e017b-physics-loss.yaml  e017c-absolute-xy.yaml  e017d-absolute-xy-vel.yaml  e018a-sf-minimal.yaml  e018b-sf-n5.yaml  e018c-context-k30.yaml  e018d-horizon-weighted.yaml  e019-baseline.yaml  e019a-context-k50.yaml  e020a-sf-ratio-10.yaml  e020b-sf-ratio-30.yaml  e020c-sf-n4.yaml  e021b-selective-bptt.yaml  e022a-bs256.yaml  e023a-dmodel192.yaml  e023b-dmodel768.yaml  e023b-epoch2.yaml  e023c-dmodel512.yaml  e023d-nlayers8.yaml  e024a-full-bptt.yaml  e025a-lr-warmup.yaml  e025b-loss-reweight.yaml  e025c-layer-dropout.yaml  e026a-muon.yaml  e026b-unimix.yaml  e026c-sf-curriculum.yaml  (+12 more)
models/: __init__.py  checkpoint.py  encoding.py  mamba2.py  mlp.py  policy_mlp.py
quantization/: README.md  benchmark_accuracy.py  generate_luts.py  quantize.py  quantize_mamba2.py  requirements.txt
scripts/: ar_utils.py  benchmark_ssd.py  check_run.py  diagnose_hitbox_coverage.py  docs_prebuild.py  eval_rollout.py  gpu_diagnostic.py  modal_train.py  modal_train_jepa.py  nonlinear_probe_diagnostic.py  notify_agent_stop.py  notify_matrix.py  pre_encode_chunked.py  prepare_dataset.py  rollout.py  run_jepa_diagnostics.py  serve_demo.py  train.py  train_jepa.py  train_local.py  train_policy.py  visualize_jepa.py
site/: next.config.ts  package-lock.json  package.json
solana/: Anchor.toml  BUILD_ISSUE.md  Cargo.toml  DEVREL_REPORT.md  env.sh  package-lock.json  package.json  tsconfig.json
solana/cli/: upload.ts
solana/client/: package.json  tsconfig.json
solana/client/src/: index.ts  input.ts  session.ts  state.ts
solana/programs-ecs/components/frame-log/: Cargo.toml
solana/programs-ecs/components/frame-log/src/: lib.rs
solana/programs-ecs/components/hidden-state/: Cargo.toml
solana/programs-ecs/components/hidden-state/src/: lib.rs
solana/programs-ecs/components/input-buffer/: Cargo.toml
solana/programs-ecs/components/input-buffer/src/: lib.rs
solana/programs-ecs/components/model-manifest/: Cargo.toml
solana/programs-ecs/components/model-manifest/src/: lib.rs
solana/programs-ecs/components/session-state/: Cargo.toml
solana/programs-ecs/components/session-state/src/: lib.rs
solana/programs-ecs/components/weight-shard/: Cargo.toml
solana/programs-ecs/components/weight-shard/src/: lib.rs
solana/programs-ecs/systems/run-inference/: Cargo.toml
solana/programs-ecs/systems/run-inference/src/: lib.rs  lut.rs  mamba2.rs  matmul.rs
solana/programs-ecs/systems/session-lifecycle/: Cargo.toml
solana/programs-ecs/systems/session-lifecycle/src/: lib.rs
solana/programs-ecs/systems/submit-input/: Cargo.toml
solana/programs-ecs/systems/submit-input/src/: lib.rs
solana/programs/cu-benchmark/: Cargo.toml
solana/programs/cu-benchmark/src/: lib.rs
solana/programs/syscall-test/: Cargo.toml
solana/programs/syscall-test/src/: lib.rs
solana/programs/upload-weights/: Cargo.toml
solana/programs/upload-weights/src/: lib.rs
solana/programs/world-model/: Cargo.toml
solana/programs/world-model/src/: error.rs  inference.rs  lib.rs  lut.rs  matmul.rs  ssm.rs  state.rs
solana/syscall/: Cargo.toml
solana/syscall/src/: lib.rs  matmul.rs
solana/syscall/tests/: mollusk.rs  unit.rs
solana/tests/: bench-direct.mjs  benchmark.ts  inference.ts  session.ts  world-model-test.mjs
training/: __init__.py  constraints.py  jepa_diagnostics.py  jepa_eval.py  jepa_trainer.py  metrics.py  muon.py  policy_trainer.py  trainer.py
viz/: CODEX-character-anim-bugs.md  e030a-reconstruction-fd.json  e030a-reconstruction.json  e030b-reconstruction-fd.json  replay_to_json.py  visualizer-juicy.html  visualizer.html
(+80 files in other folders)
