[package]
name = "awm-syscall"
version = "0.1.0"
description = "sol_matmul_i8 syscall — native INT8 matmul for MagicBlock ER validators"
edition = "2021"

[dependencies]
solana-program-runtime = "3.1"

[dev-dependencies]
mollusk-svm = "0.10"
solana-instruction = "3"
solana-pubkey = { version = "4", features = ["std"] }
solana-account = "3"
