[package]
name = "frame-log"
version = "0.1.0"
description = "Frame log component — ring buffer of recent frames for spectating/replay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
bolt-component = "0.1.0"
