[package]
name = "frame-log"
version = "0.1.0"
description = "Frame log component — ring buffer of recent frames for spectating/replay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
