[package]
name = "hidden-state"
version = "0.1.0"
description = "Hidden state component — Mamba2 SSM recurrent state"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
