[package]
name = "input-buffer"
version = "0.1.0"
description = "Input buffer component — current frame controller inputs for both players"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
