[package]
name = "session-state"
version = "0.1.0"
description = "Session state component — frame counter, status, players, current output"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
