[package]
name = "run-inference"
version = "0.1.0"
description = "Run inference system — executes Mamba2 forward pass onchain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
session-state.workspace = true
hidden-state.workspace = true
input-buffer.workspace = true
frame-log.workspace = true
model-manifest.workspace = true
weight-shard.workspace = true
