[package]
name = "submit-input"
version = "0.1.0"
description = "Submit input system — players send controller inputs each frame"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang.workspace = true
anchor-lang.workspace = true
serde = { version = "1", features = ["derive"] }
session-state.workspace = true
input-buffer.workspace = true
